basic search- drag&drop to follow

--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -8,4 +8,9 @@
   @include addons;
   @include mytheme;
 
+#header {
+    height: 120px;
+    background: #EDF6FB url(./images/crows.jpg) repeat-x;
+}
+
 }
