--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -27,10 +27,12 @@
 // For more information, see: https://vaadin.com/book/-/page/themes.valo.html
 // Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
 
-@import "../valo/valo.scss";
+//@import "../valo/valo.scss";
+@import "../reindeer/reindeer.scss"
 
 @mixin mytheme {
-  @include valo;
+  //@include valo;
+  @include reindeer;
 
   // Insert your own theme rules here
 }
