--- a/src/main/resources/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -9,7 +9,7 @@
 //$v-border: 1px solid (v-shade 0.7);
 //$v-border-radius: 4px;
 
-// Affects the color of some component elements, e.g Button, Panel title, etc
+// Affects the color of some component elements, e.g Button, Panel context, etc
 //$v-background-color: hsl(210, 0%, 98%);
 // Affects the color of content areas, e.g  Panel and Window content, TextField input etc
 //$v-app-background-color: $v-background-color;
