added a few new libraries-
biojava- for which i shall add some tests, first and figure out a way on gui-layer
super-csv for which the test should be run- can be done later, is as good as ready
coreNLP from stanford- should get the network-builders tested and written

--- a/src/main/resources/org/qoan/gui/components/common/dummy.html
+++ b/src/main/resources/org/qoan/gui/components/common/dummy.html
@@ -40,7 +40,7 @@ Something to try out- useful for trying out the ngl-viewer alone
 
 </script>
 
-<div id="viewport" style="width:800px; height:500px;"></div>
+<div uuid="viewport" style="width:800px; height:500px;"></div>
 
 </body>
 </html>
